feat(Metrics): Add feature metric
ADDED
-MetricService
-MetricController
-HistoryRepositoryCustom
-MetricDTO
-MetricMapper
-Bean queryDslConfig
-Unit tests for Metric

--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -8,3 +8,8 @@ spring:
     database: POSTGRESQL
     hibernate:
       ddl-auto: update
+    show-sql: false
+    properties:
+      hibernate:
+        format_sql: true
+
